--- a/SMS/src/components/LoginForm.css
+++ b/SMS/src/components/LoginForm.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 170px;
 }
 
 .login-section h2 {
@@ -95,6 +96,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 120px;
+
 }
 
 .login-section h2 {
